syntax = "proto3";

package go.micro.srv.account;

// import "shared/proto/basic/error.proto";
import "google/protobuf/wrappers.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

service UserService {
	rpc Exist(UserRequest) returns (UserExistResponse) {}
    rpc List(UserListQuery) returns (UserListResponse) {}
    rpc Get(UserRequest) returns (UserResponse) {}
    rpc Create(UserRequest) returns (UserResponse) {}
    rpc Update(UserRequest) returns (UserResponse) {}
	rpc Delete(UserRequest) returns (UserResponse) {}
}

service ProfileService {
    rpc List(ProfileListQuery) returns (ProfileListResponse) {}
    rpc Get(ProfileRequest) returns (ProfileResponse) {}
    rpc Create(ProfileRequest) returns (ProfileResponse) {}
}

message User {
    option (validate.disabled) = true;

	uint32 id = 1;
	string username = 2;
    string firstName = 3;
    string lastName = 4;
	string email = 5;
    string created_at = 6;
    string updated_at = 7;
}

message UserRequest {
	// google.protobuf.UInt32Value id = 1 [(validate.rules).uint32.gte = 0];
    // google.protobuf.StringValue username = 2 [(validate.rules).string = {
    //                         min_len: 6
    //                         max_len: 16
    //                         pattern:   "^[^[0-9]A-Za-z]+( [^[0-9]A-Za-z]+)*$",
    //                         max_bytes: 256,
    //                     }];
    // google.protobuf.StringValue firstName = 3 [(validate.rules).string.min_len = 3];
    // google.protobuf.StringValue lastName = 4 [(validate.rules).string.min_len = 3];
    // google.protobuf.StringValue email = 5 [(validate.rules).string.email = true];

    uint32 id = 1 [(validate.rules).uint32.gte = 0];
    string username = 2 [(validate.rules).string = {
                            min_len: 4
                            max_len: 16
                            // pattern:   "^[^[0-9]A-Za-z]+( [^[0-9]A-Za-z]+)*$",
                            pattern:  "^[a-z0-9_-]{3,15}$",
                            max_bytes: 256,
                        }];
    string firstName = 3 [(validate.rules).string.min_len = 3];
    string lastName = 4 [(validate.rules).string.min_len = 3];
    string email = 7 [(validate.rules).string.email = true];
  }

message UserResponse {
    option (validate.disabled) = true;
    User result = 1;
}

message UserExistResponse {
    option (validate.disabled) = true;
	bool result = 1;
}

message UserListQuery {
    // google.protobuf.UInt32Value limit = 1 [(validate.rules).uint32.gt = 1];
    // google.protobuf.UInt32Value page=2 [(validate.rules).uint32.gte = 1];
    // google.protobuf.StringValue sort=3;
	// google.protobuf.StringValue username = 4 [(validate.rules).string = {
    //                                             min_len: 6
    //                                             max_len: 16
    //                                             pattern:   "^[^[0-9]A-Za-z]+( [^[0-9]A-Za-z]+)*$",
    //                                             max_bytes: 256,
    //                                         }];
    // google.protobuf.StringValue firstName = 5 [(validate.rules).string.min_len = 3];
    // google.protobuf.StringValue lastName = 6 [(validate.rules).string.min_len = 3];
    // google.protobuf.StringValue email = 7 [(validate.rules).string.email = true];

    uint32 limit = 1 [(validate.rules).uint32.gt = 1];
    uint32 page=2 [(validate.rules).uint32.gte = 1];
    string sort=3;
    string username = 4 [(validate.rules).string = {
                                                min_len: 4
                                                max_len: 16
                                                // pattern:   "^[^[0-9]A-Za-z]+( [^[0-9]A-Za-z]+)*$",
                                                pattern:   "^[a-z0-9_-]{3,15}$",
                                                max_bytes: 256,
                                            }];
    string firstName = 5 [(validate.rules).string.min_len = 3];
    string lastName = 6 [(validate.rules).string.min_len = 3];
    string email = 7 [(validate.rules).string.email = true];
}
message UserListResponse {
    option (validate.disabled) = true;

    repeated User results = 1;
    uint32 total = 2;
}

// enum GenderType {
//     M = 0;
//     F = 1;
// }

message Profile {
    option (validate.disabled) = true;

	uint32 id = 1;
	string tz = 2; // *time.Location
    string avatar = 3;
    string gender = 4;
	// GenderType gender = 4; // enum
	// google.protobuf.Timestamp birthday = 5;
	uint32 user_id = 6;
    string created_at = 7;
	string updated_at = 8;
}

message ProfileRequest {
    google.protobuf.UInt32Value id = 1;
    google.protobuf.UInt32Value user_id = 2;
    google.protobuf.StringValue tz = 3;
    google.protobuf.StringValue avatar = 4 [(validate.rules).string.uri_ref = true];
    google.protobuf.StringValue gender = 5 [(validate.rules).string = {in: ["male", "female"]}];
    // GenderType gender = 4; // enum // [(validate.rules).enum.defined_only = true];
	// google.protobuf.Timestamp birthday = 5 [(validate.rules).timestamp.gt_now = true];
}

message ProfileResponse {
    option (validate.disabled) = true;

    Profile result = 1;
}

message ProfileListQuery {
    google.protobuf.UInt32Value limit=1;
    google.protobuf.UInt32Value page=2;
    google.protobuf.StringValue sort=3;
	google.protobuf.UInt32Value user_id = 4;
    google.protobuf.StringValue gender = 5 [(validate.rules).string = {in: ["male", "female"]}];
    // GenderType gender = 5;
}

message ProfileListResponse {
    option (validate.disabled) = true;

    repeated Profile results = 1;
    uint32 total = 2;
}
