
syntax = "proto3";

package micro.profile.v1;

// import "shared/proto/common/common.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "third_party/proto/validate/validate.proto";
import "srv/account/proto/user/user.proto";

option go_package = "github.com/xmlking/micro-starter-kit/srv/account/proto/profile";
option java_multiple_files = true;
option java_package = "micro.profile.v1";

service ProfileService {
  rpc List(ListRequest) returns (ListResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
}

// FIXME: https://github.com/envoyproxy/protoc-gen-validate/issues/223
// Workaround in .override.go
message ListRequest {
  google.protobuf.UInt32Value limit = 1
      [ (validate.rules).uint32 = {gte : 1, lte : 100} ];
  google.protobuf.UInt32Value page = 2 [ (validate.rules).uint32.gte = 1 ];
  google.protobuf.StringValue sort = 3;
  google.protobuf.StringValue user_id = 4
      [ (validate.rules).string.uuid = true ];
  google.protobuf.StringValue gender = 5
      [ (validate.rules).string = {in : [ "M", "F" ]} ];
  // GenderType gender = 5; // FIXME
}

message ListResponse {
  option (validate.disabled) = true;

  repeated micro.user.v1.Profile results = 1;
  uint32 total = 2;
}

message GetRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue user_id = 2
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue tz = 3;
  google.protobuf.StringValue avatar = 4
      [ (validate.rules).string.uri_ref = true ];
  google.protobuf.StringValue gender = 5
      [ (validate.rules).string = {in : [ "M", "F" ]} ];
  // GenderType gender = 5; // enum // [(validate.rules).enum.defined_only =
  // true]; // FIXME
  google.protobuf.Timestamp birthday = 6
      [ (validate.rules).timestamp.lt_now = true ];
}

message GetResponse {
  option (validate.disabled) = true;
  micro.user.v1.Profile result = 1;
}

message CreateRequest {
  google.protobuf.StringValue id = 1
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue user_id = 2
      [ (validate.rules).string.uuid = true ]; // Not Working
  google.protobuf.StringValue tz = 3;
  google.protobuf.StringValue avatar = 4
      [ (validate.rules).string.uri_ref = true ];
  google.protobuf.StringValue gender = 5
      [ (validate.rules).string = {in : [ "M", "F" ]} ];
  // GenderType gender = 5; // enum // [(validate.rules).enum.defined_only =
  // true]; // FIXME
  google.protobuf.Timestamp birthday = 6
      [ (validate.rules).timestamp.lt_now = true ];
}

message CreateResponse {
  option (validate.disabled) = true;
  micro.user.v1.Profile result = 1;
}

enum GenderType {
  GENDER_TYPE_UNSPECIFIED = 0;
  GENDER_TYPE_MALE = 1;
  GENDER_TYPE_FEMALE = 2;
}
